--- a/index.html
+++ b/index.html
@@ -4,80 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TechHub</title>
+    <title>Team Rustum</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container1">    
-        <div class="header">
-            <div class="c1items"><a href="index.html">Home</a></div>
-            <div class="c1items"><a href="blog.html">Blog</a></div>
-            <div class="c1items"><a href="team.html">Team</a></div>
-            <div class="c1items"><a href="projects.html">Projects</a></div>
-        </div>
-        <div class="c1mainbody">
-            <div class="c1body">
-                <div class="c1title">
-                    <h1 class="c1heading"></h1>
-                    <h1 class="c1heading"></h1>
-                    <h1 class="c1heading"></h1>
-                    <h1 class="c1heading"></h1>
-                    <h1 class="c1heading"></h1>
-                    <h1 class="c1heading"></h1>
-                    <h1 class="c1heading"></h1>
-                    <h1 class="c1heading"></h1>
-                    <h1 class="c1heading"></h1>
-                    <h1 class="c1heading"></h1>
-                    <h1 class="c1heading"></h1>
-                    <p></p>
-                    <button type ="button"><a href="upcoming.html" class="btnlink">Upcoming projects</a></button>
-                </div>
+    <div class="main-circle"></div>
+    <div class="header">
+        <div class="site-data">
+            <div class="site-logo">
+                <div class="logo-element">T</div>
+                <div class="logo-element">R</div>
             </div>
-            <div class="motor">
-                <div class="one face"></div>
-                <div class="two face"></div>
-                <div class="three face"></div>
-                <div class="four face"></div>
-                <div class="five face"></div>
-                <div class="six face"></div>
-            </div>
+            <div class="site-name">Team Rustum</div>
+        </div>
+        <div class="navbar">
+            <ul class="nav-options">
+                <li class="nav-option">Home</li>
+                <li class="nav-option">Projects</li>
+                <li class="nav-option">News</li>
+                <li class="nav-option">Team</li>
+            </ul>
         </div>
     </div>
-    <div class="container2">
-        <h1>About Us</h1>
-        <p>Team rustum is an technical community of electrical engineers of National Institute of Technology Hamirpur, Himachal Pradesh. 
-            This community is created by electrical engineering first year students batch(2019-23) for sharing and learning new technologies. 
-            As the education system in india is mostly focused on marks and CGPI, but in real market marks is contributed only 20% in evaluation of the student. 
-            And thats why we learn new technologies from workshops, youtube videos and from other courses instead of syllabus of the college. 
-            We don't mean to criticise the education system completly, we are here, just trying to make our future bright toghether. 
-            And one last thing is that world is changing so fast, new technologies are emerging daily and if we are only dependent upon 18 centuary syllabus, that will not enought for us to grab a placement or any college for higher education.
-        </p>
-       <!-- <button>Read More</button>  -->
+    <div class="main">
+        <div class="main-content">
+            <p class="main-heading">Team Rustum</p>
+            <p class="main-para">
+                A community for learning and developing knowledge of students in the feild of Electrical and Electronics....
+            </p>
+            <div class="main-btn"><a href="#">Project</a></div>
+        </div>
+        <div class="main-img"></div>
     </div>
-    <div class="container3">
-        <p>Our social links</p>
-        <div class="social">
-            <!-- <a href="https://github.com/techhubnith/TechHub"><div class="link"><img src="img/github.png" class="img"></div></a> -->
-            <!-- <a href=""><div class="link"><img src="img/whatsapp.png" class="img"></div></a> -->
-            <a href=""><div class="link"><img src="img/insta.jpg" class="img"></div></a>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScWHJmtCuNHCWDEnnNhMEfgDVSskzwH7CBZpxhMcRpcHXqw2g/viewform?usp=sf_link"><div class="link"><img src="img/mail.png" class="img"></div></a>
-            <a href=""><div class="link"><img src="img/facebook.png" class="img"></div></a>
+    <div class="news-section">
+        <div class="news-headline">Lorem isdsum jdhdhabsd hsbdhsbd hbd ahdb38de8  cusdhwe buwe shbcud wu</div>
+        <div class="news-btn">View News</div>
+    </div>
+    <div class="about-section">
+        <div class="community-img"></div>
+        <div class="about-content">
+            <p class="about-heading">ABOUT</p>
+            <p class="about-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas et dignissimos dicta amet doloribus corporis quam atque excepturi aspernatur minima! Rem voluptatum dicta, nostrum molestias sapiente possimus deserunt culpa tempora.</p>
         </div>
     </div>
-    <div class="container4">
-        <div class="c4header">  
-            <div class="department"></div>
-            <div class="department"></div>
-            <div class="department"></div>
-            <div class="department"></div>
+    <div class="project-section">
+        <p class="project-heading">What we do : Projects</p>
+        <div class="feature-projects">
+            <div class="feature-project"></div>
+            <div class="feature-project"></div>
+            <div class="feature-project"></div>
         </div>
-        <div class="c4body"></div>
+        <div class="main-btn project-btn">View All Projects</div>
     </div>
     <div class="footer">
-       <div style="display: flex; justify-content: center;"> <h1>A website by Virtual Organisation</h1>
-        <button><a href="" class="btnlink">Know More</a></button></div>
-        <p>&copy; 2020-21 vitual organisation</p>
+        <div class="footer-content">Copyright by teamrustum(2020)</div>
+        <div class="footer-content">
+            <div class="footer-link"><a href="#">Private Policy</a></div>
+            <div class="footer-link"><a href="#">Contact Us</a></div>
+        </div>
+        <div class="footer-content">Created by : <a href="https://www.abbyswag.github.io">Abbyswag</a></div>
     </div>
-    <script type="text/javascript" src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
